[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/defaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Title.font" type="BitmapFont" id=4]
[ext_resource path="res://src/scripts/SeedValue.gd" type="Script" id=5]
[ext_resource path="res://src/scripts/MenuBackground.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="Shader" id=4]

code = "shader_type canvas_item;
render_mode unshaded;

uniform vec2 mouse;
uniform vec2 resolution;

vec2 hash2(vec2 p ) {
   return fract(sin(vec2(dot(p, vec2(123.4, 748.6)), dot(p, vec2(547.3, 659.3))))*5232.85324);
}
float hash(vec2 p) {
  return fract(sin(dot(p*11.5, vec2(43.232, 75.876)))*45246.32957);
}

//Based off of iq's described here: http://www.iquilezles.org/www/articles/voronoilin
float voronoi(vec2 p, float s) {
    vec2 n = floor(p);
    vec2 f = fract(p);
    float md = 5.0;
    vec2 m = vec2(0.0);
    for (int i = -1;i<=1;i++) {
        for (int j = -1;j<=1;j++) {
            vec2 g = vec2(float(i), float(j));
            vec2 o = hash2(n+g)*s;
            o = 0.5+0.5*sin(0.64+5.038*o);
            vec2 r = g + o - f;
            float d = dot(r, r);
            if (d<md) {
              md = d;
              m = n+g+o;
            }
        }
    }
    return md;
}

float ov(vec2 p) {
    float v = 0.0;
    float a = 0.4;
    for (int i = 0;i<6;i++) {
        v+= voronoi(p, 1.0)*a;
        p*=2.0;
        a*=0.5;
    }
    return v;
}


void fragment() {
	float aspect = resolution.x/resolution.y;
	vec2 uv = SCREEN_UV;
	
	uv.x *= aspect;
	//Sun Height
	float sh = (resolution.y-mouse.y)/resolution.y;
    vec2 sun = vec2(0.5*aspect, -0.21+1.42*sh);
    //calculate sky gradient
	vec3 nightsky = mix(vec3(0.2, 0.2, 0.6), vec3(1.0, 1.0, 0.8), (0.8*smoothstep(0.9992, 1.0, 1.0-voronoi(uv*10.0, 16.0))*(1.0-sh)*(1.0-sh)));
	nightsky = mix(nightsky, vec3(1.0, 1.0, 0.8), (0.2+0.8*smoothstep(0.996, 1.0, 1.0-voronoi(uv*vec2(35.0), 16.0))*(1.0-sh)*(1.0-sh)));
	nightsky = mix(nightsky, vec3(1.0, 1.0, 0.8), (0.8*smoothstep(0.99, 1.0, hash(uv))*(1.0-sh)*(1.0-sh)));
    vec3 zenith = mix(nightsky, vec3(0.4, 0.6, 1.0), sh);
    vec3 azimuth = mix(vec3(1.0, 0.4, 0.4), vec3(0.75, 0.9, 1.0), sh);
	vec3 skygrad = mix(azimuth, zenith, smoothstep(0.0, 0.7+0.2*(cos((1.0-sh)*3.14159*3.0)), uv.y));
    
    //add the sun
    vec3 col = mix(vec3(1.0, 0.2+0.8*sh, 0.0), skygrad, smoothstep(0.2, 0.203, length(sun-uv)));

    // make some thin wispy clouds
    
    
    // terrain
    float h = ov(vec2(uv.x, 1.0));
    col = mix(col, vec3(0.3+0.65*sh, 0.3+0.2*sh, 0.2+0.1*sh), smoothstep(0.028, 0.03, h-uv.y));
    
	COLOR = vec4(col, 1.0);
}"

[sub_resource type="ShaderMaterial" id=5]

render_priority = 0
shader = SubResource( 4 )
shader_param/mouse = null
shader_param/resolution = null

[node name="Root" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Menu" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
script = ExtResource( 3 )
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Title" type="Label" parent="Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_top = 147.0
margin_right = 393.0
margin_bottom = 178.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
text = "INTO THE GREAT ABYSS"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="StartButton" type="Button" parent="Menu" index="1" groups=[
"startMenu",
]]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -30.0
margin_right = 40.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START"
flat = true
align = 1
_sections_unfolded = [ "Theme" ]
__meta__ = {
"_edit_lock_": true
}

[node name="OptionsButton" type="Button" parent="Menu" index="2" groups=[
"startMenu",
]]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = 10.0
margin_right = 56.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "OPTIONS"
flat = true
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="QuitButton" type="Button" parent="Menu" index="3" groups=[
"startMenu",
]]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = 50.0
margin_right = 30.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "QUIT"
flat = true
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="FullscreenButton" type="Button" parent="Menu" index="4" groups=[
"optionsMenu",
]]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -70.0
margin_right = 84.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "FULLSCREEN"
flat = true
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="MuteButton" type="Button" parent="Menu" index="5" groups=[
"optionsMenu",
]]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -30.0
margin_right = 66.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "MUTE: OFF"
flat = true
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="SeedButton" type="Label" parent="Menu" index="6" groups=[
"optionsMenu",
]]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = 10.0
margin_right = 56.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "SEED:"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Value" type="LineEdit" parent="Menu/SeedButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 115.0
margin_right = 322.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 5 )

[node name="ReturnButton" type="Button" parent="Menu" index="7" groups=[
"optionsMenu",
]]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = 50.0
margin_right = 56.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "RETURN"
flat = true
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Polygon2D" parent="." index="1"]

show_behind_parent = true
material = SubResource( 5 )
scale = Vector2( 1000, 600 )
z_index = -1
polygon = PoolVector2Array( 0, 0, 1, 0, 1, 1, 0, 1 )
uv = PoolVector2Array( 0, 0, 1, 0, 1, 1, 0, 1 )
color = Color( 1, 1, 1, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
script = ExtResource( 6 )
_sections_unfolded = [ "Material", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Menu/StartButton" to="Menu" method="_on_StartButton_pressed"]

[connection signal="pressed" from="Menu/OptionsButton" to="Menu" method="_on_OptionsButton_pressed"]

[connection signal="pressed" from="Menu/QuitButton" to="Menu" method="_on_QuitButton_pressed"]

[connection signal="pressed" from="Menu/FullscreenButton" to="Menu" method="_on_FullscreenButton_pressed"]

[connection signal="pressed" from="Menu/MuteButton" to="Menu" method="_on_MuteButton_pressed"]

[connection signal="text_changed" from="Menu/SeedButton/Value" to="Menu" method="_on_Value_text_changed"]

[connection signal="pressed" from="Menu/ReturnButton" to="Menu" method="_on_ReturnButton_pressed"]


